updated controller and services for JUnit testing